<resources>
    <string name="app_name">UnipiAudioStories</string>
    <string name="general_title">Welcome, to UnipiAudioStories</string>
    <string name="choose_story">Choose a story:</string>

    <string name="story_title">Title</string>
    <string name="author">Author:</string>
    <string name="release_date">Release Date:</string>

    <string name="statistics">Statistics:</string>
    <string name="story_reads">Reads:</string>

    <string name="settings">Settings:</string>
    <string name="choose_lang">Choose your Language:</string>

    <string name="reads_number" translatable="false">Number</string>
    <string name="date" translatable="false">Date</string>
    <string name="lang1" translatable="false">ENG</string>
    <string name="lang2" translatable="false">GRE</string>
    <string name="lang3" translatable="false">ESP</string>
</resources>