<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260sp"
    android:layout_height="110sp"
    android:background="@drawable/stroke">

    <ImageView
        android:id="@+id/ivStoryItem"
        android:layout_width="75dp"
        android:layout_height="90dp"
        android:layout_marginStart="@dimen/story_img_margin"
        android:background="@drawable/stroke"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/chalk_drawing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/subtitle_margin"
        android:layout_marginTop="@dimen/subtitle_margin"
        android:fontFamily="serif"
        android:text="@string/story_title"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="@dimen/sub2_dimen"
        app:layout_constraintStart_toEndOf="@+id/ivStoryItem"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/subtitle_margin"
        android:layout_marginTop="@dimen/statistics_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/ivStoryItem"
        app:layout_constraintTop_toBottomOf="@+id/tvStoryTitle">

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/author"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="@dimen/sub3_dimen" />

        <TextView
            android:id="@+id/tvStoryAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/author_name"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="@dimen/sub3_dimen"
            app:layout_constraintStart_toEndOf="@+id/tvAuthor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/subtitle_margin"
        android:layout_marginTop="@dimen/statistics_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/ivStoryItem"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tvReads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/story_reads"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="@dimen/sub3_dimen" />

        <TextView
            android:id="@+id/tvReadsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/reads_number"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="@dimen/sub3_dimen"
            app:layout_constraintStart_toEndOf="@+id/tvAuthor" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="@dimen/story_img_margin"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty_star" />

</androidx.constraintlayout.widget.ConstraintLayout>