<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/background_img" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_margin"
            android:fontFamily="@font/fontdiner_swanky"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="@dimen/title_dimen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_margin"
            android:fontFamily="@font/fontdiner_swanky"
            android:text="@string/choose_lang"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="@dimen/choose_story_dimen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/start_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <Button
                android:id="@+id/btnEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:backgroundTint="@color/brown"
                android:fontFamily="@font/fontdiner_swanky"
                android:text="@string/lang1"
                android:textSize="@dimen/subtitle_dimen"
                android:textColor="@color/beige" />

            <Button
                android:id="@+id/btnGreek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:backgroundTint="@color/brown"
                android:fontFamily="@font/fontdiner_swanky"
                android:text="@string/lang2"
                android:textSize="@dimen/subtitle_dimen"
                android:textColor="@color/beige" />

            <Button
                android:id="@+id/btnSpanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:backgroundTint="@color/brown"
                android:fontFamily="@font/fontdiner_swanky"
                android:text="@string/lang3"
                android:textSize="@dimen/subtitle_dimen"
                android:textColor="@color/beige" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/nav_stats"
            android:layout_width="@dimen/nav_btns"
            android:layout_height="@dimen/nav_btns"
            android:background="@color/beige"
            android:scaleType="fitXY"
            android:src="@drawable/statistics_icon"
            app:layout_constraintEnd_toStartOf="@id/nav_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/nav_home"
            android:layout_width="@dimen/nav_btns"
            android:layout_height="@dimen/nav_btns"
            android:background="@color/beige"
            android:scaleType="fitXY"
            android:src="@drawable/home_page_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/nav_settings"
            android:layout_width="@dimen/nav_btns"
            android:layout_height="@dimen/nav_btns"
            android:background="@color/beige"
            android:scaleType="fitXY"
            android:src="@drawable/settings_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nav_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>