<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".ui.StoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/ivStoryItem"
                android:layout_width="350sp"
                android:layout_height="650sp"
                android:background="@drawable/stroke"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/drawings_on_walls" />

            <ImageView
                android:id="@+id/ivStoryBorder"
                android:layout_width="300sp"
                android:layout_height="600sp"
                android:background="@drawable/stroke2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/story_title"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="@dimen/title_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivStoryBorder" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle">

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/author"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/subtitle_dimen"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="157dp" />

                <TextView
                    android:id="@+id/tvStoryAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/author_name"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/subtitle_dimen"
                    app:layout_constraintStart_toEndOf="@+id/tvAuthor"
                    tools:layout_editor_absoluteY="157dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/release_date"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/subtitle_dimen"
                    tools:layout_editor_absoluteX="19dp"
                    tools:layout_editor_absoluteY="168dp" />

                <TextView
                    android:id="@+id/tvStoryRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/subtitle_dimen"
                    tools:layout_editor_absoluteX="83dp"
                    tools:layout_editor_absoluteY="168dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvStory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="@dimen/subtitle_dimen"
                android:layout_marginTop="@dimen/subtitle_margin"
                app:layout_constraintBottom_toBottomOf="@+id/ivStoryBorder"
                app:layout_constraintEnd_toEndOf="@+id/ivStoryBorder"
                app:layout_constraintStart_toStartOf="@+id/ivStoryBorder"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:layout_width="@dimen/nav_btns"
            android:layout_height="@dimen/nav_btns"
            android:layout_marginStart="@dimen/nav_btns_margin"
            android:background="@drawable/stroke"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/home_page_btn" />

        <ImageButton
            android:layout_width="@dimen/nav_btns"
            android:layout_height="@dimen/nav_btns"
            android:layout_marginStart="@dimen/nav_btns_margin"
            android:background="@drawable/stroke"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/settings_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>